clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-clusterip-service
spec:
  type: ClusterIP # Default type. It exposes the service on a cluster-internal IP.
  selector:
    app: my-app # Selects the pods that have the label 'app: my-app'.
  ports:
    - protocol: TCP # Can also be UDP or SCTP, depending on your application’s requirements.
      port: 80 # The port that will be exposed internally in the cluster.
      targetPort: 8080 # The port where your application is running inside the pod.
