headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-headless
  labels:
    app: my-app
spec:
  clusterIP: None # This makes the service headless.
  selector:
    app: nginx
  ports:
    - port: 80 # Port for communication.
      targetPort: 8080 # Target port where the app listens.
