nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nodeport-service
spec:
  type: NodePort
  selector:
    app: my-app # Selects the pods that have the label 'app: my-app'. Make sure your pods have this label.
  ports:
    - protocol: TCP # You can change this to UDP or SCTP if your application uses those protocols.
      port: 80 # The port that will be exposed inside the cluster.
      targetPort: 8080 # The port where your application inside the pod is listening.
      nodePort: 30036 # The specific port exposed on the Node's IP (must be in the range 30000-32767).
