stateful-set.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-headless
  labels:
    app: mysql
spec:
  clusterIP: None # HEADLESS!
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  serviceName: my-app-headless # The headless service used to manage the network identity.
  replicas: 3 
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: nginx
          image: nginx:1.19.3
          ports:
            - containerPort: 80
  # This section is important if you want each pod in the StatefulSet to have its own persistent storage.
  volumeClaimTemplates:
    - metadata:
        name: nginx-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
