gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
  namespace: example
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: example.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: example-tls
            kind: Secret
            namespace: example
      allowedRoutes:
        namespaces:
          from: Same
