httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: example
spec:
  parentRefs:
    - name: example-gateway
  hostnames:
    - "example.local"
  rules:
    - backendRefs:
        - name: app-service
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /app
    - backendRefs:
        - name: web-mobile
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /auto
          headers:
            - type: Exact
              name: user-agent
              value: mobile
    - backendRefs:
        - name: web-desktop
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /auto
